--- a/news.html
+++ b/news.html
@@ -5,13 +5,13 @@
 </head>
 <body>
   <ul>
-    <li><a class="active" href="./index.html">Home</a></li>
-    <li><a href="./news.html">News</a></li>
-    <li><a href="./contact.html">Contact</a></li>
-    <li><a href="./about.html">About</a></li>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
   </ul>
 
-  <div class="footercontainer">
+  <!-- <div class="footercontainer">
     <div class="container">
       <div class="headtext">How to take care of nature</div>
       <div class="headtext2">Hadizzo is a 3d animator expert</div>
@@ -30,5 +30,5 @@
       <div class="headtext2">Hadizzo is a front-end developer too</div>
       <div class="headtext2">He is also an article writer</div>
     </div>
-  </div>
+  </div> -->
 </body>
